# PoolHeaterEfficiencyCalculator

./: pyproject.toml
res/: house.blend  house.blend1  house2.blend  house2.blend1
res/models/: garageCollector.gltf  house.gltf  house2.gltf  poolCollector.gltf  roofCollector.gltf  shedCollector.gltf  solarCollectorOnRoof.gltf  solarCollectorOnShed.gltf  solarCollectors.gltf  test.gltf
shaders/: color.glsl  forwardPassFragmentShader.glsl  forwardPassVertexShader.glsl  fragmentShader.glsl  shadowPassFragmentShader.glsl  shadowPassVertexShader.glsl  shadowSamples.glsl  utilities.glsl  vertexShader.glsl
src/: app.py  camera.py  controller.py  core.py  dataPanel.py  freeFlyController.py  gltfLoader.py  graphicsResource.py  house.py  light.py  main.py  material.py  mesh.py  meshPrimitive.py  object.py  orbitController.py  orthographicCamera.py  perspectiveCamera.py  renderPass.py  renderable.py  renderer.py  scene.py  sidePanel.py  sky.py  solarCollector.py  sunCamera.py  sunLight.py  transform.py  viewport.py  viewportPanel.py  widgets.py  zoomController.py
