[project]
name = "poolheaterefficiencycalculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moderngl>=5.12.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pyglm>=2.8.3",
    "pygltflib>=1.16.5",
    "pyopengl>=3.1.10",
    "pyqt6>=6.11.0",
    "pyqtgraph>=0.14.0",
    "sun-position-calculator>=1.0.0",
    "superqt>=0.8.1",
]
